@@ -6,6 +6,7 @@ ver 0.23 (not yet released)
   - support relative positions in "addid"
   - fix relative positions in "move" and "moveid"
   - add "position" parameter to "findadd" and "searchadd"
+  - add position parameter to "load"
 * database
   - proxy: require MPD 0.20 or later
   - proxy: require libmpdclient 2.11 or later
